--- a/rightbar.css
+++ b/rightbar.css
@@ -32,6 +32,7 @@
     background-color: #333; 
     overflow: hidden;
     position: relative;
+    padding: 0px;
 }
 
 #todo-container {
@@ -58,9 +59,20 @@
     resize: none; 
 }
 
-#addTaskButton {
+#add-task-button {
     border-radius: 5px;
-    background-color: rgb(84, 182, 68)
+    background-color: rgb(84, 182, 68);
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    -webkit-transition-duration: 0.3s;
+    -webkit-transition-property:box-shadow, transform;
+}
+
+#add-task-button:hover, #add-task-button:focus, #add-task-button:active {
+    box-sizing: 0 0 20px rbga(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 .task-item {
@@ -113,6 +125,10 @@ button:hover {
     background-color: #777;
 }
 
+.page {
+    padding: 20px;
+}
+
 #page1 {
     display: block;
     overflow-x: hidden;
@@ -121,6 +137,10 @@ button:hover {
 #page2 {
     display: block;
     overflow-x: hidden;
+}
+
+#essential-links-title {
+    margin-bottom: 35px;
 }
 
 .essential-links {
@@ -152,17 +172,35 @@ button:hover {
 .page-arrow {
     cursor: pointer; 
     position: absolute;
-    top: 95%; 
+    /* top: auto; */
+    bottom: 0;
     width: 40px;
-    height: 40px; 
+    height: 40px;
+    margin: 20px;
+    /* margin-bottom: 60px; */
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    /*transition: transform 0.3s ease-in-out;*/
+    -webkit-filter: invert(100%);
+    transition: transform 0.3s ease-in-out;
 }
 
-#right-arrow {
-    margin-left: 82%;
+.arrow-container {
+    width: fit-content; /* Adjust width as needed */
+    height: fit-content; /* Adjust height as needed */
+    overflow: hidden;
+}
+
+.page-arrow:hover {
+    transform: scale(1.1);
 }
 
 #left-arrow {
-    margin-right: 5%;
+    /* margin-right: 5%; */
+    left: 0;
 }
 
+#right-arrow {
+   /* margin-left: 82%; */
+   right: 0;
+}
 
